# Ingenuity-Engine

./: .gitattributes  .gitignore  LICENSE  README.md
erdos-engine/: .env.example  README.md  pyproject.toml  run.sh
erdos-engine/lean_workspace/: ErdosEngine.lean  lake-manifest.json  lakefile.toml
erdos-engine/reports/: 20260425_194104_erdos_004.json  20260425_194104_erdos_004.md  20260425_210236_erdos_004.json  20260425_211407_erdos_004.json  20260425_212135_erdos_004.json  20260425_212135_erdos_004.md  20260425_213237_erdos_004.json  20260425_213237_erdos_004.md  20260425_213905_erdos_004.json  20260425_214011_erdos_004.json  20260425_214125_erdos_004.json  20260425_214251_erdos_004.json  20260425_214349_erdos_004.json  20260425_214349_erdos_004.md  20260425_214609_erdos_004.json  20260425_215030_erdos_004.json  20260425_215300_erdos_004.json  20260425_215904_erdos_004.json  20260425_220616_erdos_004.json  20260426_172922_erdos_004.json  20260426_190151_erdos_004.json  20260426_192107_erdos_004.json  20260426_192107_erdos_004.md  20260426_192159_erdos_004.json  20260426_192229_erdos_004.json  20260426_192303_erdos_004.json  20260426_195139_erdos_004.json  20260426_195245_erdos_004.json  20260426_195245_erdos_004.md  20260426_195442_erdos_004.json  20260426_195649_erdos_004.json  20260426_201352_erdos_004.json  20260426_210455_erdos_004.json
erdos-engine/tests/: test_asymptotic_checker.py  test_beam_search.py  test_checkers.py  test_harness_reducer.py  test_ingestion.py  test_json_parsing.py  test_lean_workspace.py  test_lemma_store.py  test_mock_llm.py  (+5 more)
(+554 files in other folders)
