[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "erdos-engine"
version = "0.1.0"
description = "Lean-first local proof-search harness for Erdos-style problems"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Erdos Engine" }]
dependencies = [
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "networkx>=3.2",
  "sympy>=1.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]
z3 = [
  "z3-solver>=4.12",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
  "integration: marks tests that require external tools",
]
